# ocex-coupon-signature

./: .gitignore  Cargo.toml  README.md
pkg/: ocex_coupon_signature.d.ts  ocex_coupon_signature.js  ocex_coupon_signature_bg.wasm
pkg_node/: README.md  ocex_coupon_signature_bg.wasm  ocex_coupon_signature_bg.wasm.d.ts  package.json
pkg_web/: README.md  ocex_coupon_signature.d.ts  ocex_coupon_signature.js  ocex_coupon_signature_bg.js  ocex_coupon_signature_bg.wasm  package.json
src/: lib.rs
